2004-10-07	Florian Boor  	<florian.boor@kernelconcepts.de>

	* sound.c: Changed labels to become more descriptive.
	* sound/sound.c, alarmctl*: Switch for automatic volume setting.
	                            Added icon for alarm volume slider.
	* sound/sound.c, alarmctl*: Implemented alarm settings.
	* sound/alarmctl.[c/h]: New files implementing alarm settings interface.
	* Makefile: Version number, added new module.

2004-10-07	Florian Boor  	<florian.boor@kernelconcepts.de>

	* ipaqscreen/brightness.c: Added support for linux 2.6 sysfs interface.

2004-10-01	Florian Boor  	<florian.boor@kernelconcepts.de>

	* login-setup.c: Enable display locking only if a password is set.
	* users/callbacks.c: Remove new user if cancel is clicked.

2004-09-29	Florian Boor  	<florian.boor@kernelconcepts.de>

	* main.c: Renamed network applet from "IP Addresses" to "Network Setup".

2004-09-28	Florian Boor  	<florian.boor@kernelconcepts.de>

	* serial.c: Added hint that gpsd is necessary to use GPS settings.

2004-09-22	Florian Boor  	<florian.boor@kernelconcepts.de>

	* theme.c: Changed maximum application font size from 20 to 16.
	           Some GUI improvement for appmgr interface.
		   
	* login-setup.c: Removed support for login background because of missing
	                 support in gpe-login.

2004-09-20	Florian Boor  	<florian.boor@kernelconcepts.de>

	* sleep/callbacks.c,
	  sleep/main.c: Renamed ipaq-sleep config file to become more generic and
	                hidden.
	  
	* ownerinfo.c: Restart gpe-login to update info.

2004-09-16	Florian Boor  	<florian.boor@kernelconcepts.de>

	* suid.c: Use xtscal for calibration directly.

2004-09-12	Florian Boor  	<florian.boor@kernelconcepts.de>
	
	* Released V 0.1.19
	* soundctl.c: Removed another obsolete ioctl().
	* soundctrl.c: Fixed segfault and some minor issues.
	* sound.c: Added some comments.
	* main.c: Minor fix in applet handling.
	* tasks.*: Implemented sound settings save/restore task.